TestCases/Errors/range_value/observations/sum_08_obs.spm
 obs   5-13   0.00666666666666667 
 obs   5-14   0.00666666666666667 
 obs   6-14   0.00733333333333333 
 obs   6-15   0.00515282131661442 
 obs   6-16   0.00689655172413793 
 obs   7-16   0.0111678004535147 
 obs   6-17   0.00611111111111111 
 obs   11-18   0.01 
 obs   12-18   0.01 
 obs   10-19   0.00461538461538462 
 obs   11-19   0.0119230769230769 
 obs   12-19   0.0142307692307692 
 obs   10-20   0.010224358974359 
 error_value   5-13   0 
 error_value   5-14   0 
 error_value   6-14   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   6-17   0 
 error_value   11-18   0 
 error_value   12-18   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   12-19   0 
 error_value   10-20   0 
